<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login_title">Hai, let\'s login!</string>
    <string name="login_message">Share your story with us, become know each other is great!</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="new_to_story">New to Story App?</string>
    <string name="register">Register</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="register_message">It\'s quick and easy.</string>
    <string name="register_header">Create an account</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register_success">Register Success</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="condirm_password">Condirm password</string>
</resources>