<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_login"
            android:layout_width="240dp"
            android:layout_height="@dimen/_170sdp"
            android:layout_marginTop="@dimen/_26sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/login_bro" />

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textStyle="bold"
            android:textSize="@dimen/_25ssp"
            app:layout_constraintStart_toStartOf="@id/gd_start"
            app:layout_constraintEnd_toEndOf="@id/gd_end"
            app:layout_constraintTop_toBottomOf="@+id/img_login" />

        <TextView
            android:id="@+id/tv_login_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/login_message"
            android:alpha="0"
            app:layout_constraintEnd_toEndOf="@id/gd_end"
            app:layout_constraintStart_toStartOf="@id/gd_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_title"
            tools:alpha="1"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_email"
            android:layout_marginTop="@dimen/_24sdp"
            app:layout_constraintEnd_toEndOf="@id/gd_end"
            app:layout_constraintStart_toStartOf="@id/gd_start"
            app:layout_constraintTop_toBottomOf="@id/tv_login_desc"
            android:alpha="0"
            style="@style/primaryButtonStyle"
            tools:alpha="1">

            <com.albro.storyapp.core.common.ui.EmailEditText
                android:id="@+id/ed_login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/enter_your_email"
                android:textCursorDrawable="@drawable/sh_cursor_edittext"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_password"
            android:layout_marginTop="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="@id/gd_end"
            app:layout_constraintStart_toStartOf="@id/gd_start"
            app:layout_constraintTop_toBottomOf="@id/til_login_email"
            android:alpha="0"
            style="@style/primaryButtonStyle"
            tools:alpha="1" >

            <com.albro.storyapp.core.common.ui.PasswordEditText
                android:id="@+id/ed_login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/sh_cursor_edittext"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@id/gd_end"
            app:layout_constraintStart_toStartOf="@id/gd_start"
            app:layout_constraintTop_toBottomOf="@id/til_login_password"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:alpha="0"
            style="@style/primaryButtonStyle"
            tools:alpha="1" />

        <LinearLayout
            android:id="@+id/ll_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="@id/gd_end"
            app:layout_constraintStart_toStartOf="@id/gd_start"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:alpha="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_to_story" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:textColor="@color/md_theme_light_onErrorContainer"
                android:text="@string/register" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="26dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_20sdp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>